# rock-paper-scissors-autogencore

./: README.md  main.py  pyproject.toml
